alteração no .env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 PORT=5000
-MONGO_URI=mongodb+srv://heloiltonsl_db_user:140280ito@produtos-jel-lacos.tvmds2w.mongodb.net/?retryWrites=true&w=majority&appName=produtos-jel-lacos
+MONGO_URI=mongodb+srv://heloiltonsl_db_user:140280ito@produtos-jel-lacos.tvmds2w.mongodb.net/produtos-jel-lacos?retryWrites=true&w=majority&appName=produtos-jel-lacos
 JWT_SECRET=umsegredoforte_jen_lacos_12345
 ADMIN_USER=heloy          # opcional: usuário admin que será criado automaticamente na 1ª vez
 ADMIN_PASS=senha123       # opcional: senha do admin (só use em dev)
